Stable version, Hiding unhiding elements is completed

--- a/brandMyPage/src/webparts/brandMyPage/components/BrandMyPage.module.scss
+++ b/brandMyPage/src/webparts/brandMyPage/components/BrandMyPage.module.scss
@@ -1,4 +1,10 @@
 .brandMyPage {
+  .show{
+    display: block;
+  }
+  .hide{
+    display: none !important;
+  }
   .container {
     max-width: 700px;
     margin: 0px auto;
