added few basic layout

--- a/brandMyPage/src/webparts/brandMyPage/components/Config/IConfigLanding.module.scss
+++ b/brandMyPage/src/webparts/brandMyPage/components/Config/IConfigLanding.module.scss
@@ -48,5 +48,13 @@
         vertical-align: top;
         display: inline-block;
       }
+      .right
+      {
+        float:right;
+      }
+      .top10Padding
+      {
+        padding-top: 10px;
+      }
     }
   }
