*Has issues - trying to stream line webpart property updates

--- a/brandMyPage/src/webparts/brandMyPage/components/Config/IConfigLanding.module.scss
+++ b/brandMyPage/src/webparts/brandMyPage/components/Config/IConfigLanding.module.scss
@@ -48,13 +48,13 @@
         vertical-align: top;
         display: inline-block;
       }
-      .right
-      {
-        float:right;
-      }
-      .top10Padding
-      {
-        padding-top: 10px;
-      }
+    }
+    .right
+    {
+      text-align:right;
+    }
+    .top10Margin
+    {
+      margin-top: 10px;
     }
   }
