Completed customize theme tab

--- a/brandMyPage/src/webparts/brandMyPage/components/Config/IConfigLanding.module.scss
+++ b/brandMyPage/src/webparts/brandMyPage/components/Config/IConfigLanding.module.scss
@@ -65,4 +65,12 @@
     {
       margin-top: 10px;
     }
+    .tableRowCustomStyle th
+    {
+      padding: 6px;
+    }
+    .tableRowCustomStyle td
+    {
+      padding: 5px;
+    }
   }
