added basic framework style update

--- a/brandMyPage/src/webparts/brandMyPage/components/Config/IConfigLanding.module.scss
+++ b/brandMyPage/src/webparts/brandMyPage/components/Config/IConfigLanding.module.scss
@@ -65,6 +65,10 @@
     {
       margin-top: 10px;
     }
+    .left30Margin
+    {
+      margin-left: 30px;
+    }
     .tableRowCustomStyle th
     {
       padding: 6px;
