Fixed issue with showing Save button only in edit mode

--- a/MegaMenu/src/webparts/megaMenu/components/MegaMenu.module.scss
+++ b/MegaMenu/src/webparts/megaMenu/components/MegaMenu.module.scss
@@ -9,6 +9,9 @@
   .redFont{
     color: rgb(180, 5, 5);
   }
+  .paddingLeft10px{
+    padding-left: 10px !important;
+  }
   .links{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: #393939;
