--- a/MegaMenu/src/webparts/megaMenu/components/MegaMenu.module.scss
+++ b/MegaMenu/src/webparts/megaMenu/components/MegaMenu.module.scss
@@ -49,7 +49,13 @@
     height: 60px;
     position: fixed;
     right: 0;
-    top: 0;  
+    top: 0;
+    &:hover
+    {
+      .close{
+        transform: rotate(180deg);
+      }
+    }
   }
   .close {
     display: block;
@@ -121,25 +127,25 @@
       position: absolute;
       top: calc(100% - 2px);
     }
-  }
-  .megaBotton:hover
-  {
-    .burgerBar{
-      margin-top: 4px;
-      transition: 0.2s ease all;
-      width: 48px;
-      margin-left: 1px;
-      margin-right: 1px;
-    }
-    .burgerBar:before {
-      box-shadow: #fff 0 12px 0 0;
-      transition: 0.2s ease all;   
-      width: 48px;   
-    }
-    .burgerBar:after {
-      top: calc(100% - 6px);
-      transition: 0.2s ease all;
-      width: 48px;
+    &:hover
+    {
+      .burgerBar{
+        margin-top: 4px;
+        transition: 0.1s ease all;
+        width: 48px;
+        margin-left: 1px;
+        margin-right: 1px;
+      }
+      .burgerBar:before {
+        box-shadow: #fff 0 12px 0 0;
+        transition: 0.1s ease all;   
+        width: 48px;   
+      }
+      .burgerBar:after {
+        top: calc(100% - 6px);
+        transition: 0.1s ease all;
+        width: 48px;
+      }
     }
   }
   .container {
